--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/git_toolbox_prj.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/react_frontend.iml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
