--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": false, // file 대소문자충돌로 false
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
