--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
     "styled-components": "^6.1.8",
-    "typescript": "^5.5.3",
+    "typescript": "~3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
